보드 및 코멘트 수정 오류 해결