@@ -8,16 +8,12 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
-import org.springframework.util.LinkedMultiValueMap;
-import org.springframework.util.MultiValueMap;
 import org.springframework.web.client.RestTemplate;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-import java.text.SimpleDateFormat;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
-import java.util.Date;
 import java.util.Optional;
 
 
@@ -31,12 +27,12 @@ public class GetSituationData {
     @Value("${portal.secretkey}") private String portalKey;
     @Value("${portal.url}") private String portalUrl;
 
-    @Scheduled(cron = "0 0 0 * * *")
-    public void getData() throws UnsupportedEncodingException {
+    @Scheduled(cron = "0 38 0 * * *")
+    public void getData() {
         LocalDate today = LocalDate.now();
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMdd");
 
-        String serviceKey_Decoder = URLDecoder.decode(portalKey.toString(), "UTF-8");
+        String serviceKey_Decoder = URLDecoder.decode(portalKey, StandardCharsets.UTF_8);
 
         String url = portalUrl + "?ServiceKey=" + serviceKey_Decoder + "&startCreateDt=" + today.format(formatter);
 
@@ -46,6 +42,7 @@ public class GetSituationData {
         CovidResponseData covidResponseData = response.getBody().getItems().get(0);
         Optional<CovidData> yesterday = covidRepository.findByDate(LocalDate.now().minusDays(1));
 
+        log.info(String.valueOf(LocalDate.now()));
         CovidData todayData;
         if (yesterday.isPresent()) {
             todayData = new CovidData(LocalDate.parse(covidResponseData.getStateDt(), formatter),
